bcp de changement

--- a/kanban.front/src/main/resources/public/app/index.html
+++ b/kanban.front/src/main/resources/public/app/index.html
@@ -105,7 +105,7 @@
     <script type="text/javascript" src="app.js"></script>
     
     <script type="text/javascript" src="/app/controllers/kanban/helpers/KanbanHelper.js"></script>
-    
+	<script type="text/javascript" src="/app/controllers/kanban/AbstractKanbanController.js"></script>
 	<script type="text/javascript" src="/app/controllers/kanban/KanbanController.js"></script>
 	<script type="text/javascript" src="/app/controllers/kanban/KanbanPriority.js"></script>
 	<script type="text/javascript" src="/app/controllers/login/LoginController.js"></script>
@@ -116,6 +116,8 @@
 	<script type="text/javascript" src="/app/services/kanban.socket.service.js"></script>
 	<script type="text/javascript" src="/app/services/kanban.user.service.js"></script>
 	<script type="text/javascript" src="/app/services/kanban.statut.service.js"></script>
+	<script type="text/javascript" src="/app/services/kanban.app.service.js"></script>
+	<script type="text/javascript" src="/app/services/kanban.version.service.js"></script>
 	
     <!-- Javascript -->
 
