MAJ de plein de trucs, ca fait longtemps que je n'avais pas coomité

--- a/kanban.front/src/main/resources/public/app/index.html
+++ b/kanban.front/src/main/resources/public/app/index.html
@@ -3,14 +3,17 @@
 <head >
 	<meta charset="UTF-8">
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	
-	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.4/angular-material.min.css">	
+
+	<link rel="icon" type="image/png" href="../asset/svg/presentation.png" />
+
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.11.4/angular-material.min.css">
 	<link rel="stylesheet" type="text/css" href="../asset/css/kanban/grid.css">
 	<link rel="stylesheet" type="text/css" href="../asset/css/kanban/drag.css">
 	<link rel="stylesheet" type="text/css" href="../asset/css/kanban/button.css">
 	<link rel="stylesheet" type="text/css" href="../asset/css/kanban/style.css">
 	<link rel="stylesheet" type="text/css" href="../asset/css/kanban/loginform.css">
-	
+	<title>D-Kanban</title>
+
 </head>
 <body style="background-color: white" >
 	<md-toolbar>
@@ -84,9 +87,10 @@
 <!-- Javascript Libs -->
     <script src="//cdn.jsdelivr.net/sockjs/1.0.0/sockjs.min.js"></script>    
     <script type="text/javascript" src="../asset/bower_components/vertxbus-3.1.0.js"></script>  
-    <script type="text/javascript" src="../asset/bower_components/moment-with-locales.js"></script> 
-    
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>	
+    <script type="text/javascript" src="../asset/bower_components/moment-with-locales.js"></script>
+	<script type="text/javascript" src="../asset/bower_components/angular-base64.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script type="text/javascript" src="../asset/bower_components/angular-ui-router.min.js"></script>	
@@ -107,7 +111,7 @@
     <script type="text/javascript" src="/app/controllers/kanban/helpers/KanbanHelper.js"></script>
 	<script type="text/javascript" src="/app/controllers/kanban/AbstractKanbanController.js"></script>
 	<script type="text/javascript" src="/app/controllers/kanban/KanbanController.js"></script>
-	<script type="text/javascript" src="/app/controllers/kanban/KanbanPriority.js"></script>
+	<script type="text/javascript" src="/app/controllers/kanban/kanbanPriority.js"></script>
 	<script type="text/javascript" src="/app/controllers/login/LoginController.js"></script>
 	<script type="text/javascript" src="/app/controllers/admin/AdminController.js"></script>
 	<script type="text/javascript" src="/app/services/kanban.list.service.js"></script>
